# Simple-GBEmu

./: .gitignore  CMakeLists.txt  readme.md  settings.ini  vcpkg.json
docs/: note.md
gbemu/: CMakeLists.txt  main.c
lib/: CMakeLists.txt
tests/: CMakeLists.txt
